Add charts and style them with SASS

--- a/src/sass/partials/_mixins.sass
+++ b/src/sass/partials/_mixins.sass
@@ -36,3 +36,7 @@
 @mixin create-row()
   .row
     @include row()
+
+@mixin color-chart($number, $property, $color)
+  #chart#{$number} &
+    #{$property}: $color !important
