--- a/src/sass/partials/_vars.sass
+++ b/src/sass/partials/_vars.sass
@@ -5,9 +5,11 @@ $color-red: rgb(255, 0, 0) // #f00
 $color-silver: rgb(204, 204, 204) // #ccc
 
 // Fonts
-$sans-serif-font: Oswald, Helvetica, 'sans-serif';
-$serif-font: 'Spectral SC', Arial, serif;
+$sans-serif-font: Oswald, Helvetica, 'sans-serif'
+$serif-font: 'Spectral SC', Arial, serif
 
 // Layout
 $columns: 12
 
+// Transition
+$transition-time: .3s
