--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,5 +1,5 @@
-@import './partials/mixins';
-@import './partials/vars';
+@import './partials/mixins'
+@import './partials/vars'
 
 @include create-columns($columns)
 @include create-row()
@@ -8,4 +8,4 @@
 //@include xrays(all)
 
 // Actually the styles
-@import './index';
+@import './index'
