--- a/src/sass/_index.sass
+++ b/src/sass/_index.sass
@@ -1,5 +1,5 @@
 body
-  font-family: $sans-serif-font;
+  font-family: $sans-serif-font
   margin: 0
   padding: 0
 
@@ -15,8 +15,14 @@ body
       width: 80px
 
 a
+  color: darken($color-silver, 50%)
+  display: block
+  padding: 4px 8px
   text-decoration: none
-  background-color: rgba($color-silver, .1);
-  padding: 4px 8px;
+  transition: $transition-time ease all
+  &:hover
+    background-color: rgba($color-silver, .1);
+    color: darken($color-silver, 100%)
 
-@import 'partials/menu';
+@import 'partials/graphics'
+@import 'partials/menu'
